Changelog for Limone
--------------------

Unreleased
++++++++++

- ...

0.1a1 (2011-07-07)
++++++++++++++++++

- First alpha release.