@@ -4,7 +4,8 @@ Changelog for Limone
 Unreleased
 ++++++++++
 
-- ...
+- Refactored some internals to allow extension by packages that might want to
+  use Limone as a base.  See `limone_zodb` as an example.
 
 0.1a1 (2011-07-07)
 ++++++++++++++++++
